refactor: reduce duplication on day 11